--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,6 @@ commands = python setup.py build_sphinx
 # E123, E125 skipped as they are invalid PEP-8.
 
 show-source = True
-ignore = E123,E125,H803
+ignore = E125,E126,E128,E129,E265,H305,H404,H405
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build
