--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,9 @@ classifier =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.3
     Programming Language :: Python :: 3.4
+packages =
+    networking_brocade
+version = 2015.1.1
 
 [files]
 packages =
