--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ oslo.db>=1.3.0  # Apache-2.0
 oslo.messaging>=1.4.0,!=1.5.0
 oslo.serialization>=1.2.0               # Apache-2.0
 oslo.utils>=1.2.0                       # Apache-2.0
+python-subunit>=0.0.18
 
 # This project does depend on neutron as a library, but the
 # openstack tooling does not play nicely with projects that
