--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,9 @@ setenv =
 deps = -egit+https://git.openstack.org/openstack/neutron#egg=neutron
        -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands = python setup.py testr --slowest --testr-args='{posargs}'
+whitelist_externals = sh
+commands =
+  sh tools/pretty_tox.sh '{posargs}'
 
 [testenv:pep8]
 commands = flake8
