--- a/setup.cfg
+++ b/setup.cfg
@@ -48,3 +48,8 @@ input_file = networking_brocade/locale/networking-brocade.pot
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
 output_file = networking_brocade/locale/networking-brocade.pot
+
+[entry_points]
+console_scripts =
+    vyatta-fake-agent = networking_brocade.vyatta.common.l3_agent:main
+    vyatta-vpn-fw-agent = networking_brocade.vyatta.vpn_fw_agent:main
