Add entry points vyatta vpn, firewall and l3 agent
Change-Id: I0e51a48140308a988758bc89a43fe085afd6552a
Closes-Bug: #1456912

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,3 +48,9 @@ input_file = networking_brocade/locale/networking-brocade.pot
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
 output_file = networking_brocade/locale/networking-brocade.pot
+
+[entry_points]
+console_scripts =
+    vyatta-l3-agent = networking_brocade.vyatta.common.l3_agent:main
+    vyatta-fw-agent = neutron_fwaas.services.firewall.agents.vyatta.fwaas_agent:main
+    vyatta-vpn-agent = neutron_vpnaas.cmd.eventlet.vyatta_agent:main
