Support for enable password configuration
When enable password is configured in device, ML2 plugin
will not be able to configure the device via SSH or TELNET.

Now this is supported by reading the response of each command
and identifying the prompt.

Change-Id: I3344f63b2f076809046fdbe92b9c9227bc0f1e1c
Closes-Bug: 1481161

--- a/etc/neutron/plugins/brocade/brocade_mlx.ini
+++ b/etc/neutron/plugins/brocade/brocade_mlx.ini
@@ -9,6 +9,8 @@
 # password = The SSH password to use to connect to device
 # physical_networks = Allowed physical networks for VLAN configuration
 # ports = Comma separated list of ports on the switch which needs to be tagged to VLAN
+# enable_username = The username for the enable configuration prompt, if any.
+# enable_password = The password for the enable configuration prompt, if any.
 #
 # Example:
 # [mlx]
@@ -17,3 +19,5 @@
 # password = password
 # physical_networks = physnet1
 # ports = 3/3, 3/9
+# enable_username = admin
+# enable_password = password
