--- a/etc/neutron/plugins/ml2/ml2_conf_brocade_fi_ni.ini
+++ b/etc/neutron/plugins/ml2/ml2_conf_brocade_fi_ni.ini
@@ -11,6 +11,8 @@
 # ports = Ports on the switch which needs to tagged to VLAN. Multiple ports can be separated by a comma.
 # transport = Protocol to use for device connection(SSH or Telnet). Default is SSH. This is an optional parameter
 # ostype   = Optional parameter, which will identify the firmware version(FI/NI)
+# enable_username = The username for the enable configuration prompt, if any.
+# enable_password = The password for the enable configuration prompt, if any.
 #
 # Example:
 # [icx-1]
@@ -21,6 +23,8 @@
 # ports = 1/1/1, 1/1/2
 # transport = SSH
 # ostype   = FI
+# enable_username = admin
+# enable_password = password
 
 # Example:
 # [mlx]
@@ -31,3 +35,5 @@
 # ports = 3/3, 3/9
 # transport = SSH
 # ostype   = NI
+# enable_username = admin
+# enable_password = password
