--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 # The order of packages is significant, because pip processes them in the order
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
-pbr>=0.6,!=0.7,<1.0
+pbr<2.0,>=1.4
 
-eventlet>=0.15.2
+eventlet>=0.17.4
 httplib2>=0.7.5
 netaddr>=0.7.12
-SQLAlchemy>=0.9.7,<=0.9.99
-alembic>=0.7.1
-six>=1.7.0
-oslo.config>=1.6.0  # Apache-2.0
-oslo.db>=1.3.0  # Apache-2.0
-oslo.messaging>=1.4.0,!=1.5.0
-oslo.serialization>=1.2.0               # Apache-2.0
-oslo.utils>=1.2.0                       # Apache-2.0
+SQLAlchemy<1.1.0,>=0.9.7
+alembic>=0.8.0
+six>=1.9.0
+oslo.config>=2.1.0  # Apache-2.0
+oslo.db>=2.0  # Apache-2.0
+oslo.messaging!=1.17.0,!=1.17.1,>=1.16.0
+oslo.serialization>=1.4.0               # Apache-2.0
+oslo.utils>=2.0.0                       # Apache-2.0
 
 # This project does depend on neutron as a library, but the
 # openstack tooling does not play nicely with projects that
