Final decomposition from neutron tree
All the vendor code is scheduled to be removed from the neutron tree,
see https://review.openstack.org/248399

This patch moves the models, config files, and entry points into the
vendor repo so that it is independent.

Change-Id: I023284f760fa40b7ad06736f529688394ad27e2c

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,10 @@ version = 2015.1.1
 [files]
 packages =
     networking_brocade
+data_files =
+    etc/neutron/plugins/ml2 =
+        etc/neutron/plugins/ml2/ml2_conf_brocade.ini
+        etc/neutron/plugins/ml2/ml2_conf_brocade_fi_ni.ini
 
 [build_sphinx]
 source-dir = doc/source
@@ -48,3 +52,10 @@ input_file = networking_brocade/locale/networking-brocade.pot
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
 output_file = networking_brocade/locale/networking-brocade.pot
+
+[entry_points]
+neutron.service_plugins =
+    brocade_mlx_l3 = networking_brocade.mlx.services.l3_router.brocade.l3_router_plugin:BrocadeRouterPlugin
+neutron.ml2.mechanism_drivers =
+    brocade = networking_brocade.vdx.ml2driver.mechanism_brocade:BrocadeMechanism
+    brocade_fi_ni = networking_brocade.mlx.ml2.fi_ni.mechanism_brocade_fi_ni:BrocadeFiNiMechanism
