--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,8 @@ skipsdist = True
 
 [testenv]
 usedevelop = True
-install_command = pip install -U {opts} {packages}
-setenv =
-   VIRTUAL_ENV={envdir}
-deps = -egit+https://git.openstack.org/openstack/neutron#egg=neutron
-       -r{toxinidir}/requirements.txt
+install_command = {toxinidir}/tools/tox_install.sh {opts} {packages}
+deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 whitelist_externals = sh
 commands =
