Update Brocade MLX plugin from Neutron decomposition
Add ini files to repository and list ini files and entry
points in setup.cfg for MLX plugins.

Update requirements.txt, tox.ini files for Neutron repo
dependencies.

Add config registrations to mech driver as these were
removed when decomposed from Neutron.  Update mech driver
to return in cases of unsupported type or physnet
instead of throwing exception.

Update requirements.txt to be same as current Neutron
requirements.

Add devstack plugin shell script.

Change-Id: Id32efe9ea3580b559d86c1b8a1db7aeb4aa690d7

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,18 @@ version = 2015.1.1
 [files]
 packages =
     networking_brocade
+data_files =
+    etc/neutron =
+        etc/neutron/plugins/ml2/ml2_conf_brocade_fi_ni.ini
+        etc/neutron/plugins/brocade/brocade_mlx.ini
+
+[entry_points]
+neutron.ml2.mechanism_drivers =
+    brocade_fi_ni = networking_brocade.mlx.ml2.fi_ni.mechanism_brocade_fi_ni:BrocadeFiNiMechanism
+
+# Service Plugins
+neutron.service_plugins =
+    brocade_mlx_l3 = networking_brocade.mlx.services.l3_router.brocade.l3_router_plugin.BrocadeRouterPlugin
 
 [build_sphinx]
 source-dir = doc/source
