--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 # The order of packages is significant, because pip processes them in the order
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
-pbr>=1.6 # Apache-2.0
+pbr!=0.7,<1.0,>=0.6
 
-eventlet!=0.18.3,>=0.18.2 # MIT
-httplib2>=0.7.5 # MIT
-netaddr!=0.7.16,>=0.7.12 #BSD
-SQLAlchemy<1.1.0,>=1.0.10 # MIT
-alembic>=0.8.0 # MIT
-six>=1.9.0 # MIT
-oslo.config>=3.7.0 # Apache-2.0
-oslo.db>=4.1.0 # Apache-2.0
-oslo.messaging>=4.0.0
-oslo.serialization>=1.10.0 # Apache-2.0
-oslo.utils>=3.5.0 # Apache-2.0
+eventlet!=0.17.0,>=0.16.1
+httplib2>=0.7.5
+netaddr>=0.7.12
+SQLAlchemy<0.9.99,>=0.9.7
+alembic<0.8.1,>=0.7.2
+six>=1.9.0
+oslo.config<1.10.0,>=1.9.3  # Apache-2.0
+oslo.db<1.8.0,>=1.7.0  # Apache-2.0
+oslo.messaging<1.9.0,>=1.8.0
+oslo.serialization<1.5.0,>=1.4.0 # Apache-2.0
+oslo.utils!=1.4.1,<1.5.0,>=1.4.0  # Apache-2.0
