--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ usedevelop = True
 install_command = pip install -U {opts} {packages}
 setenv =
    VIRTUAL_ENV={envdir}
-deps = -egit+https://git.openstack.org/openstack/neutron#egg=neutron
+deps = -egit+https://git.openstack.org/openstack/neutron@stable/kilo#egg=neutron
        -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 whitelist_externals = sh
