Adding Non-ampp support for VDX
Add support for NON-AMPP(VLAN) based networking on VDX switches.
NON-AMPP based networking can be accessed through a seperate mechanism driver.

Change-Id: I4e67ff816af71ebbed1be29023c8b3c652ab3f73

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,12 +32,18 @@ data_files =
         etc/neutron/plugins/brocade/brocade_mlx.ini
 
 [entry_points]
+neutron.db.alembic_migrations =
+    networking-brocade = networking_brocade.vdx.db.migration:alembic_migrations
 neutron.ml2.mechanism_drivers =
     brocade_fi_ni = networking_brocade.mlx.ml2.fi_ni.mechanism_brocade_fi_ni:BrocadeFiNiMechanism
+    brocade_vdx_ampp = networking_brocade.vdx.ampp.ml2driver.mechanism_brocade:BrocadeMechanism
+    brocade_vdx_vlan = networking_brocade.vdx.non_ampp.ml2driver.mechanism_brocade:BrocadeMechanism
+    brocade_vdx_baremetal = networking_brocade.vdx.bare_metal.mechanism_brocade:BrocadeMechanism
 
 # Service Plugins
 neutron.service_plugins =
     brocade_mlx_l3 = networking_brocade.mlx.services.l3_router.brocade.l3_router_plugin.BrocadeRouterPlugin
+    brocade_vdx_l3 = networking_brocade.vdx.services.l3_router.l3_router_plugin.BrocadeSVIPlugin
 
 [build_sphinx]
 source-dir = doc/source
