Adding Non-ampp support for VDX Add support for NON-AMPP(VLAN) based networking on VDX switches. NON-AMPP based networking can be accessed through a seperate mechanism driver.
Change-Id: I4e67ff816af71ebbed1be29023c8b3c652ab3f73

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,8 +32,13 @@ data_files =
         etc/neutron/plugins/brocade/brocade_mlx.ini
 
 [entry_points]
+neutron.db.alembic_migrations =
+    networking-brocade = networking_brocade.vdx.db.migration:alembic_migrations
 neutron.ml2.mechanism_drivers =
     brocade_fi_ni = networking_brocade.mlx.ml2.fi_ni.mechanism_brocade_fi_ni:BrocadeFiNiMechanism
+    brocade = networking_brocade.vdx.ampp.ml2driver.mechanism_brocade:BrocadeMechanism
+    brocade_vlan = networking_brocade.vdx.non_ampp.ml2driver.mechanism_brocade:BrocadeMechanism
+    brocade_baremetal = networking_brocade.vdx.bare_metal.mechanism_brocade:BrocadeMechanism
 
 # Service Plugins
 neutron.service_plugins =
