--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ commands = python setup.py build_sphinx
 # E123, E125 skipped as they are invalid PEP-8.
 
 show-source = True
-ignore = E125,E126,E128,E129,E265,H305,H404,H405,H703
+ignore = E125,E126,E128,E129,E265,H305,H404,H405,H703,N340,N341
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build
 
