--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,19 @@ version = 2015.1.1
 packages =
     networking_brocade
 
+[entry_points]
+neutron.db.alembic_migrations =
+    networking-brocade = networking_brocade.vdx.db.migration:alembic_migrations
+neutron.ml2.mechanism_drivers =
+    brocade_fi_ni = networking_brocade.mlx.ml2.fi_ni.mechanism_brocade_fi_ni:BrocadeFiNiMechanism
+    brocade_vdx_ampp = networking_brocade.vdx.ampp.ml2driver.mechanism_brocade:BrocadeMechanism
+    brocade_vdx_vlan = networking_brocade.vdx.non_ampp.ml2driver.mechanism_brocade:BrocadeMechanism
+    brocade_vdx_baremetal = networking_brocade.vdx.bare_metal.mechanism_brocade:BrocadeMechanism
+
+# Service Plugins
+neutron.service_plugins =
+    brocade_vdx_l3 = networking_brocade.vdx.services.l3_router.l3_router_plugin.BrocadeSVIPlugin
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
