--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,14 @@
 # process, which may cause wedges in the gate later.
 pbr>=1.6 # Apache-2.0
 
-eventlet!=0.18.3,>=0.18.2 # MIT
+eventlet>=0.17.4 # MIT
 httplib2>=0.7.5 # MIT
 netaddr!=0.7.16,>=0.7.12 #BSD
-SQLAlchemy<1.1.0,>=1.0.10 # MIT
+SQLAlchemy<1.1.0,>=0.9.9 # MIT
 alembic>=0.8.0 # MIT
 six>=1.9.0 # MIT
-oslo.config>=3.7.0 # Apache-2.0
-oslo.db>=4.1.0 # Apache-2.0
-oslo.messaging>=4.0.0
-oslo.serialization>=1.10.0 # Apache-2.0
-oslo.utils>=3.5.0 # Apache-2.0
+oslo.config>=2.3.0 # Apache-2.0
+oslo.db>=2.4.1 # Apache-2.0
+oslo.messaging!=1.17.0,!=1.17.1,!=2.6.0,!=2.6.1,!=2.7.0,!=2.8.0,!=2.8.1,!=2.9.0,!=3.1.0,>=1.16.0
+oslo.serialization>=1.4.0 # Apache-2.0
+oslo.utils!=2.6.0,>=2.0.0 # Apache-2.0
