Pushing the test directory paths to tox.ini
These changes will make the Test suite to pick
the directory paths which need to be tested
from the tox.ini config file.It will add more
flexibility to the test suite.

Change-Id: I56df3ba0dd0e734949432fe275adabcf505cb323
Closes-Bug: #1457654

--- a/tox.ini
+++ b/tox.ini
@@ -39,3 +39,11 @@ exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build
 [hacking]
 import_exceptions = neutron.i18n
 local-check-factory = neutron.hacking.checks.factory
+
+[test_dir_paths]
+dir_paths = [
+		'./networking_brocade/tests',
+		'./networking_brocade/mlx/tests/unit/ml2/drivers/brocade' ,
+		'./networking_brocade/mlx/tests/unit/services/l3_router/brocade',
+		'./networking_brocade/vyatta/tests'
+	    ]
