Switch to using hacking checks from neutron-lib
Temporarily comment out the 'no neutron' check.

Change-Id: I7812635e2d059cd692b7568937008804dacf825a
Partially-Implements: blueprint neutron-lib

--- a/tox.ini
+++ b/tox.ini
@@ -30,12 +30,14 @@ commands = python setup.py build_sphinx
 [flake8]
 # H803 skipped on purpose per list discussion.
 # E123, E125 skipped as they are invalid PEP-8.
+# TODO(dougwig) -- uncomment this to test for remaining linkages
+# N530 direct neutron imports not allowed
 
 show-source = True
-ignore = E125,E126,E128,E129,E265,H305,H404,H405,H703,N340,N341
+ignore = E125,E126,E128,E129,E265,H305,H404,H405,H703,N340,N341,N530
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build
 
 [hacking]
 import_exceptions = neutron.i18n
-local-check-factory = neutron.hacking.checks.factory
+local-check-factory = neutron_lib.hacking.checks.factory
