--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ oslo.db>=4.1.0 # Apache-2.0
 oslo.messaging>=4.0.0
 oslo.serialization>=1.10.0 # Apache-2.0
 oslo.utils>=3.5.0 # Apache-2.0
+neutron-lib>=0.1.0 # Apache-2.0
