--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ usedevelop = True
 install_command = pip install -U {opts} {packages}
 setenv =
    VIRTUAL_ENV={envdir}
+   PYTHONWARNINGS=default::DeprecationWarning
 deps = -egit+https://git.openstack.org/openstack/neutron#egg=neutron
        -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
