mechanism driver for uplink ports
Change-Id: Ia000f88e7a4a08bc1aec286439ca3c00f2f924ea

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ classifier =
     Programming Language :: Python :: 3.4
 packages =
     networking_brocade
-version = 2015.1.1
+version = 2015.1.2
 
 [files]
 packages =
@@ -35,6 +35,7 @@ neutron.ml2.mechanism_drivers =
     brocade_vdx_ampp = networking_brocade.vdx.ampp.ml2driver.mechanism_brocade:BrocadeMechanism
     brocade_vdx_vlan = networking_brocade.vdx.non_ampp.ml2driver.mechanism_brocade:BrocadeMechanism
     brocade_vdx_baremetal = networking_brocade.vdx.bare_metal.mechanism_brocade:BrocadeMechanism
+    brocade_vdx_uplinkports = networking_brocade.vdx.uplinkports.mechanism_brocade:BrocadeMechanism
 
 # Service Plugins
 neutron.service_plugins =
